--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@heroicons/vue": "^1.0.6",
+    "firebase": "^9.6.10",
+    "html2canvas": "^1.4.1",
+    "install": "^0.13.0",
+    "npm": "^8.6.0",
     "pinia": "^2.0.11",
     "vue": "^3.2.31"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
-    "@types/node": "^16.11.25",
+    "@types/node": "^16.11.26",
     "@vitejs/plugin-vue": "^2.2.2",
     "@vitejs/plugin-vue-jsx": "^1.3.7",
     "@vue/eslint-config-prettier": "^7.0.0",
