--- a/package.json
+++ b/package.json
@@ -1,9 +1,20 @@
 {
   "name": "relazon",
-  "version": "1.0.0",
-  "main": "src/main.ts",
+  "version": "1.0.2",
+  "main": "./dist/relazon.umd.js",
+  "module": "./dist/relazon.es.js",
+  "files": [
+    "dist"
+  ],
+  "exports": {
+    ".": {
+      "import": "./dist/relazon.es.js",
+      "require": "./dist/relazon.umd.js"
+    }
+  },
   "scripts": {
     "dev": "vite",
+    "beforePublish": "tar czf relazon.tar.gz ./dist/",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview --port 5050",
     "typecheck": "vue-tsc --noEmit",
