Fix - Add dist to export in package

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     ".": {
       "import": "./dist/relazon.es.js",
       "require": "./dist/relazon.umd.js"
-    }
+    },
+    "./": "./dist"
   },
   "scripts": {
     "dev": "vite",
