--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   },
   "scripts": {
     "dev": "vite",
-    "beforePublish": "tar czf relazon.tar.gz ./dist/",
     "build": "vue-tsc --noEmit && vite build",
+    "publishPkg": "npm run build && npm publish",
     "preview": "vite preview --port 5050",
     "typecheck": "vue-tsc --noEmit",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
