--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "firebase": "^9.6.10",
     "html2canvas": "^1.4.1",
     "install": "^0.13.0",
+    "mosha-vue-toastify": "^1.0.23",
     "npm": "^8.6.0",
     "pinia": "^2.0.11",
     "vue": "^3.2.31"
