Fix - Improve github actions

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,14 +1,21 @@
 name: Publish to NPM
 on:
-  release:
-    types: [ created ]
+  push:
+    - main
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Setup Node
+        with:
+          token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
+      - name: Increment package version 📦⏫
+                - run: git config --global user.name 'RemyPottierFR'
+                - run: git config --global user.email 'remypottierpro@gmail.com'
+                - run: npm version patch -m "[RELEASE] %s"
+                - run: git push
+      - name: Setup Node 🖥️
         uses: actions/setup-node@v2
         with:
           node-version: '14.x'
