--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,15 +6,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout and increment package version 📦⏫
         uses: actions/checkout@v2
         with:
           token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
-      - name: Increment package version 📦⏫
-                - run: git config --global user.name 'RemyPottierFR'
-                - run: git config --global user.email 'remypottierpro@gmail.com'
-                - run: npm version patch -m "[RELEASE] %s"
-                - run: git push
+          - run: git config --global user.name 'RemyPottierFR'
+          - run: git config --global user.email 'remypottierpro@gmail.com'
+          - run: npm version patch -m "[RELEASE] %s"
+          - run: git push
       - name: Setup Node 🖥️
         uses: actions/setup-node@v2
         with:
