--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,6 +14,7 @@ jobs:
           node-version: '14.x'
           registry-url: 'https://registry.npmjs.org'
       - run: |
+          echo { { secrets.ENV_VARS } }
           echo { { secrets.ENV_VARS } } > .env
       - name: Install dependencies and build 🔧
         run: npm install && npm run build
