--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
+      - run: git pull
       - run: git config --global user.name 'RemyPottierFR'
       - run: git config --global user.email 'remypottierpro@gmail.com'
       - name: Increment package version
