--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "postcss": "^8.4.12",
     "prettier": "^2.5.1",
     "tailwindcss": "^3.0.23",
+    "ts-morph": "^14.0.0",
     "typescript": "~4.5.5",
     "vite": "^2.8.4",
     "vue-tsc": "^0.31.4"
