--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
       "require": "./dist/relazon.umd.js"
     }
   },
+  "types": "./dist/main.d.ts",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
